# gdrust-sprite3d-angle-animator

./: .gitignore  Cargo.toml  LICENSE  README.md
animation-core/: Cargo.toml
animation-core/src/: animator.rs  direction_calculator.rs  lib.rs
gdrust-sprite3d-animation-core/: Cargo.toml
gdrust-sprite3d-animation-core/src/: animator.rs  animators.rs  core.rs  errors.rs  lib.rs  multi_sprite_animator.rs  single_sprite_animator.rs  tests.rs  utils.rs
gdrust-sprite3d-animation-core/src/animators/: muti_sprite_animator.rs  single_sprite_animator.rs
gdrust-sprite3d-animation-derive/: Cargo.toml
gdrust-sprite3d-animation-derive/src/: lib.rs
sided-animation-derive/: Cargo.toml
sided-animation-derive/src/: lib.rs
src/: lib.rs  prelude.rs  tests.rs
