[package]
name = "gdrust-sprite3d-angle-animator"
version = "0.1.0"
edition = "2021"
authors = ["Jason.json"]

[dependencies]
gdrust-sprite3d-animation-derive = { path = "./gdrust-sprite3d-animation-derive" }
gdrust-sprite3d-animation-core = { path = "./gdrust-sprite3d-animation-core" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
opt-level = "s"
